--- a/css/style.css
+++ b/css/style.css
@@ -582,6 +582,19 @@ table {
           font: 16px/25px Verdana;
           font-weight: bold;
           color: #840000; }
+          @media (max-width: 1070px) {
+            .header .header_kontakt_line .ring_wrap .ring {
+              position: relative;
+              display: block; }
+              .header .header_kontakt_line .ring_wrap .ring:before {
+                content: '';
+                position: absolute;
+                width: 8px;
+                height: 6px;
+                background-image: url("../img/sprite_header.png");
+                background-position: -354px -70px;
+                right: -4px;
+                bottom: 10px; } }
           @media (max-width: 1009px) {
             .header .header_kontakt_line .ring_wrap .ring {
               display: block;
@@ -589,7 +602,9 @@ table {
               line-height: 20px;
               float: left;
               text-align: left;
-              font-size: 15px; } }
+              font-size: 15px; }
+              .header .header_kontakt_line .ring_wrap .ring:before {
+                display: none; } }
           @media (max-width: 770px) {
             .header .header_kontakt_line .ring_wrap .ring {
               max-width: 160px;
@@ -8094,7 +8109,7 @@ header {
   background: -webkit-linear-gradient(top, #f6f6f6 0%, #f6f6f6 65%, #ffffff 100%);
   background: linear-gradient(to bottom, #f6f6f6 0%, #f6f6f6 65%, #ffffff 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f6f6', endColorstr='#ffffff',GradientType=0 ); }
-  @media (max-width: 700px) {
+  @media (max-width: 770px) {
     .section_crumbs {
       display: none; } }
   .section_crumbs ul {
